# buildluajava

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/pub/hanks/buildluajava/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: luajava.c  luajava.h
app/src/main/cpp/cjson/: lua_cjson.c  strbuf.c
app/src/main/cpp/lua/: lbaselib.c  ldump.c  liolib.c  luac.c  lundump.c
app/src/main/cpp/luajava/: luajava.c  luajava.h
app/src/main/java/com/luajava/: LuaJavaAPI.java  LuaState.java
app/src/main/java/pub/hanks/buildluajava/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/pub/hanks/buildluajava/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
